--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -609,4 +609,10 @@ config VIBRATOR_CONTROL
 	help
 	  Say Y here to enable Vibrator Control
 
+config SOUND_CONTROL
+	bool "Enable support for Sound Control"
+	default y
+	help
+	  Enable support for Sound Control
+
 endif # MISC_DEVICES
