--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -62,3 +62,4 @@ obj-$(CONFIG_CUSTOM_VOLTAGE)	+= custom_voltage.o
 obj-$(CONFIG_BLX)    += blx.o
 obj-$(CONFIG_TOUCH_WAKE)	+= touch_wake.o
 obj-$(CONFIG_VIBRATOR_CONTROL)	+= vibrator_control.o
+obj-$(CONFIG_SOUND_CONTROL)	+= sound_control.o
