--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -603,4 +603,10 @@ config TOUCH_WAKE
 	help
 	  Say Y here to enable Touch Wake
 
+config VIBRATOR_CONTROL
+	bool "Support for Vibrator Control"
+	default y
+	help
+	  Say Y here to enable Vibrator Control
+
 endif # MISC_DEVICES
