--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -61,3 +61,4 @@ obj-$(CONFIG_COLOR_CONTROL)	+= color_control.o
 obj-$(CONFIG_CUSTOM_VOLTAGE)	+= custom_voltage.o
 obj-$(CONFIG_BLX)    += blx.o
 obj-$(CONFIG_TOUCH_WAKE)	+= touch_wake.o
+obj-$(CONFIG_VIBRATOR_CONTROL)	+= vibrator_control.o
