--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -172,6 +172,10 @@ config CPU_FREQ_DEFAULT_GOV_ONDEMANDX
 	help
 	  Use the CPUFreq governor 'lionheart' as default.
 
+config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
+	bool "pegasusq"
+	select CPU_FREQ_GOV_PEGASUSQ
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -324,6 +328,9 @@ config CPU_FREQ_GOV_SAKURACTIVE
 config CPU_FREQ_GOV_ONDEMANDX
 	tristate "'ondemandx' cpufreq governor"
 	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_PEGASUSQ
+	tristate "'pegasusq' cpufreq policy governor"
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
