Verify Sync with latest INTELLIDEMAND config
Sync with last INTELLIDEMAND_VERSION v3.2

Add LIMIT_MAX_FREQ for Intellidemand

Sync with last INTELLIDEMAND cpufreq governor

Tweak and Fix INTELLIDEMAND

cpufreq_intellidemand.c: Tweak Governor

cpufreq_intellidemand.c: Tweak Governor II

intellidemand: tweaked hysteresis value for better UI response

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -215,6 +215,13 @@ config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND
 	  Use the CPUFreq governor 'intellidemand' as default. This is
 	  based on Ondemand with browsing detection based on GPU loading
 
+config CPU_FREQ_DEFAULT_GOV_INTELLIDEMANDX
+	bool "intellidemandX"
+	select CPU_FREQ_GOV_INTELLIDEMANDX
+	help
+	  Use the CPUFreq governor 'intellidemandX' as default. This is
+	  based on Ondemand with browsing detection based on GPU loading
+
 config CPU_FREQ_DEFAULT_GOV_ADAPTIVE
 	bool "adaptive"
 	select CPU_FREQ_GOV_ADAPTIVE
@@ -621,6 +628,13 @@ config CPU_FREQ_GOV_INTELLIDEMAND
           For details, take a look at linux/Documentation/cpu-freq.
 
           If in doubt, say N.
+
+config CPU_FREQ_GOV_INTELLIDEMANDX
+        tristate "'intellidemandX' cpufreq governor"
+        depends on CPU_FREQ
+        help
+          'intellidemandx' - an intelligent ondemand governor with
+	  early suspend/wake code and CPU hotplugging.
 
 config INTELLI_MAX_ACTIVE_FREQ
 	int "Max Active Freq for Intellidemand"
