--- a/arch/arm/configs/francoair_defconfig
+++ b/arch/arm/configs/francoair_defconfig
@@ -182,14 +182,15 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_FIFO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_VR is not set
-CONFIG_DEFAULT_BFQ=y
+CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_FIFO is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -496,6 +497,8 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_FANTASY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DYNAMIC_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
@@ -506,6 +509,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SAKURACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -516,9 +521,13 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_FANTASY=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_SAKURACTIVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 # CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 CONFIG_CPU_IDLE=y
