--- a/arch/arm/configs/francoair_defconfig
+++ b/arch/arm/configs/francoair_defconfig
@@ -527,8 +527,8 @@ CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_SAKURACTIVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_LULZACTIVEQ=m
-CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVEQ=y
+# CONFIG_CPU_FREQ_GOV_LULZACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 CONFIG_CPU_IDLE=y
