--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -225,6 +225,13 @@ config CPU_FREQ_DEFAULT_GOV_ADAPTIVE
 	  'adaptive' governor for latency-sensitive workloads and demanding
 	  performance.
 
+config CPU_FREQ_DEFAULT_GOV_ADAPTIVEX
+	bool "adaptivex"
+	select CPU_FREQ_GOV_ADAPTIVEX
+	help
+	  Use the CPUFreq governor 'adaptiveX' as default.
+	  'adaptive' with suspend/wake and CPU hotplugging support.
+
 config CPU_FREQ_DEFAULT_GOV_LULZACTIVE
 	bool "lulzactive"
     select CPU_FREQ_GOV_LULZACTIVE
@@ -431,6 +438,11 @@ config CPU_FREQ_GOV_ADAPTIVE
 	  If in doubt, say N.
 
 	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_ADAPTIVEX
+	tristate "'adaptiveX' cpufreq policy governor"
+	help
+	  'adaptive' with suspend/wake/hotplugging support.
 
 config CPU_FREQ_GOV_SAKURACTIVE
 	tristate "'sakuractive' cpufreq governor"
