--- a/arch/arm/configs/starkissed_defconfig
+++ b/arch/arm/configs/starkissed_defconfig
@@ -32,6 +32,18 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
 
 #
+# Thermal Framework
+#
+CONFIG_THERMAL_FRAMEWORK=y
+CONFIG_THERMAL_FRAMEWORK_DEBUG=y
+CONFIG_OMAP_THERMAL=y
+CONFIG_OMAP4_DUTY_CYCLE=y
+# CONFIG_OMAP4_DIE_TEMP_SENSOR is not set
+# CONFIG_OMAP4_PCB_SENSOR is not set
+# CONFIG_OMAP4_TMP102_SENSOR is not set
+# CONFIG_OMAP_DIE_GOVERNOR is not set
+
+#
 # General setup
 #
 CONFIG_EXPERIMENTAL=y
@@ -314,7 +326,6 @@ CONFIG_OMAP_32K_TIMER_HZ=128
 CONFIG_OMAP_DM_TIMER=y
 CONFIG_OMAP_DM_TIMER_DEBUG=y
 CONFIG_OMAP_TEMP_SENSOR=y
-CONFIG_OMAP4_PCB_SENSOR=y
 CONFIG_OMAP_REMOTEPROC_MEMPOOL_SIZE=0x0
 # CONFIG_OMAP_PM_NONE is not set
 # CONFIG_OMAP_PM_NOOP is not set
@@ -1195,6 +1206,7 @@ CONFIG_LTE_MODEM_CMC221=y
 CONFIG_COLOR_CONTROL=y
 CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_BLX=y
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
