--- a/arch/arm/configs/starkissed_defconfig
+++ b/arch/arm/configs/starkissed_defconfig
@@ -32,18 +32,6 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
 
 #
-# Thermal Framework
-#
-CONFIG_THERMAL_FRAMEWORK=y
-CONFIG_THERMAL_FRAMEWORK_DEBUG=y
-CONFIG_OMAP_THERMAL=y
-CONFIG_OMAP4_DUTY_CYCLE=y
-# CONFIG_OMAP4_DIE_TEMP_SENSOR is not set
-# CONFIG_OMAP4_PCB_SENSOR is not set
-# CONFIG_OMAP4_TMP102_SENSOR is not set
-# CONFIG_OMAP_DIE_GOVERNOR is not set
-
-#
 # General setup
 #
 CONFIG_EXPERIMENTAL=y
@@ -1206,7 +1194,7 @@ CONFIG_LTE_MODEM_CMC221=y
 CONFIG_COLOR_CONTROL=y
 CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_BLX=y
-CONFIG_TOUCH_WAKE=y
+# CONFIG_TOUCH_WAKE is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -2377,6 +2365,14 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 # Altera FPGA firmware download module
 #
 # CONFIG_ALTERA_STAPL is not set
+CONFIG_THERMAL_FRAMEWORK=y
+CONFIG_THERMAL_FRAMEWORK_DEBUG=y
+CONFIG_OMAP_THERMAL=y
+CONFIG_OMAP4_DUTY_CYCLE=y
+# CONFIG_OMAP4_DIE_TEMP_SENSOR is not set
+# CONFIG_OMAP4_PCB_SENSOR is not set
+# CONFIG_OMAP4_TMP102_SENSOR is not set
+# CONFIG_OMAP_DIE_GOVERNOR is not set
 CONFIG_CLKDEV_LOOKUP=y
 # CONFIG_HWSPINLOCK is not set
 CONFIG_REMOTE_PROC=y
