--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -295,6 +295,11 @@ config CPU_FREQ_DEFAULT_GOV_KTOONSERVATIVE
 	  driver. Fallback governor will be the performance governor.  This
 	  governor adds the capability of hotpluging.
 
+
+config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
+	bool "nightmare"
+	select CPU_FREQ_GOV_NIGHTMARE
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -526,6 +531,9 @@ config CPU_FREQ_GOV_SAKURACTIVE
 config CPU_FREQ_GOV_ONDEMANDX
 	tristate "'ondemandx' cpufreq governor"
 	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_NIGHTMARE
+	tristate "'nightmare' cpufreq policy governor"
 
 config CPU_FREQ_GOV_PEGASUSQ
 	tristate "'pegasusq' cpufreq policy governor"
