--- a/arch/arm/configs/starkissed_defconfig
+++ b/arch/arm/configs/starkissed_defconfig
@@ -1215,6 +1215,8 @@ CONFIG_COLOR_CONTROL=y
 CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_BLX=y
 # CONFIG_TOUCH_WAKE is not set
+CONFIG_VIBRATOR_CONTROL=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
