--- a/arch/arm/configs/dualkissed_defconfig
+++ b/arch/arm/configs/dualkissed_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.66 Kernel Configuration
+# Linux/arm 3.0.67 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -489,7 +489,7 @@ CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 # CONFIG_USE_OF is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="console=ttyS0,115200 androidboot.console=ttyS0 fbcon=map:0 rotate:0 mem=1G vmalloc=768M zcache omap_wdt.timer_margin=60 no_console_suspend=1 logleve=4"
+CONFIG_CMDLINE="fbcon=map:0 mem=1G vmalloc=768M zcache omap_wdt.timer_margin=30 no_console_suspend=1 loglevel=4"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
