--- a/arch/arm/configs/dualkissed_defconfig
+++ b/arch/arm/configs/dualkissed_defconfig
@@ -472,7 +472,7 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CLEANCACHE=y
-# CONFIG_FRONTSWAP is not set
+CONFIG_FRONTSWAP=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 # CONFIG_LEDS is not set
 CONFIG_ALIGNMENT_TRAP=y
@@ -1234,7 +1234,7 @@ CONFIG_LTE_MODEM_CMC221=y
 CONFIG_COLOR_CONTROL=y
 CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_BLX=y
-# CONFIG_TOUCH_WAKE is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_VIBRATOR_CONTROL=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_HAVE_IDE=y
