--- a/arch/arm/configs/starkissed_defconfig
+++ b/arch/arm/configs/starkissed_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.66 Kernel Configuration
+# Linux/arm 3.0.68 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1225,7 +1225,7 @@ CONFIG_LTE_MODEM_CMC221=y
 CONFIG_COLOR_CONTROL=y
 CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_BLX=y
-# CONFIG_TOUCH_WAKE is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_VIBRATOR_CONTROL=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_HAVE_IDE=y
