--- a/arch/arm/configs/starkissed_defconfig
+++ b/arch/arm/configs/starkissed_defconfig
@@ -1229,6 +1229,7 @@ CONFIG_BLX=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_VIBRATOR_CONTROL=y
 CONFIG_SOUND_CONTROL=y
+CONFIG_TEMP_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
